<resources>
    <string name="app_name">Commerz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="tab_text_1">Profile</string>
    <string name="tab_text_2">My Ads</string>
    <string name="tab_text_3">My Favorites</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="have_an_account_login_here">Have an account? Login here.</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title">Title</string>
    <string name="details_about_the_ad">Details about the ad</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="show_e_mail_on_this_ad">Show E-Mail on this ad</string>
    <string name="show_phone_number_on_this_ad">Show Phone Number on this ad</string>
    <string name="choose_images">Choose images</string>
    <string name="create_ad">Create Ad</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here.</string>
    <string name="delete_ad">Delete Ad</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="new_ad">New Ad</string>
    <string name="my_ads">My Ads</string>
    <string name="account">Account</string>
</resources>