<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_add"
            android:title="@string/new_ad" />
        <item
            android:id="@+id/nav_my_ads"
            android:title="@string/my_ads"
            />

    </group>

    <group  android:checkableBehavior="single">
        <item android:title="@string/account">
            <menu>
                <item
                    android:id="@+id/nav_register"
                    android:title="@string/register" />
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login" />
            </menu>
        </item>
    </group>

</menu>
