<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Email@live.com"
            android:inputType="textEmailAddress"
            android:shadowColor="@color/colorPrimary"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:shadowColor="@color/colorPrimary"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="#ffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/logout"
            android:textColor="#ffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_click_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logout_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/don_t_have_an_account_register_here"
            android:textColor="#8C8C8C" />
    </RelativeLayout>

</FrameLayout>